@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-18T08:13:56Z",
-  "count_outdated" : 201,
-  "uniques_outdated" : 173,
+  "timestamp" : "2023-10-19T08:14:01Z",
+  "count_outdated" : 202,
+  "uniques_outdated" : 174,
   "count" : 211,
   "uniques" : 182,
   "clones" : [
-    {
-      "timestamp": "2023-10-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-06T00:00:00Z",
       "count": 1,
