@@ -1,3 +1,12 @@
+2023-10-19T08:14:01Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6571741697 # 1264
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-19
+* notice: last 14d: unq all: 3 9
+* notice: prev accum: outdated-unq outdated-all / unq all: 173 201 / 182 211
+* notice: next accum: outdated-unq outdated-all / unq all: 174 202 / 182 211
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-10-05] / []
+
 2023-10-18T08:13:56Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6558087593 # 1261
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-18
